--- a/{{cookiecutter.repo_name}}/css/default.css
+++ b/{{cookiecutter.repo_name}}/css/default.css
@@ -1,18 +1,101 @@
+/****************************************************************************
+ ***    Presentation Styles
+ ****************************************************************************/
 body {
-    background-color: black;
     color: white;
-    font-size: 18pt;
+    font-size: 20pt;
+    width:1100px;
+
+    background: #111;
+    background: radial-gradient(#225, #111);
 }
 
 a {
     color: #aaf;
     text-decoration: none;
 }
-
 a:visited {
     color: #98f;
 }
-
 a:hover {
     color: #bbf;
+}
+
+h1, h2, h3, h4, h5 {
+    background-color: #149;
+    padding: 5px;
+    padding-left: 10px;
+}
+
+h1 {
+    background: #149 no-repeat right;
+    background-image: url('../img/title-logo.png');
+    padding-right: 80px;
+}
+
+
+/****************************************************************************
+ ***    Slide Styles
+ ****************************************************************************/
+
+div.step {
+    min-width: 1024px;
+    min-height: 720px;
+}
+
+div.step img.centered {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+img.float-right {
+    border: none;
+    padding-left: 1rem;
+    float: right;
+}
+
+
+/****************************************************************************
+ ***    Bullet Styles
+ ****************************************************************************/
+
+div.bullet-checkmark > ul > li {
+    list-style: none;
+}
+div.bullet-checkmark > ul > li:before {
+    content: "\2714";
+    color: #9e9;
+    margin-right: 1.1rem;
+}
+
+div.bullet-arrow > ul > li {
+    list-style: none;
+}
+div.bullet-arrow > ul > li:before {
+    content: "\27a2";
+    color: #e99;
+    margin-right: 1.1rem;
+}
+
+div.bullet-hand > ul > li {
+    list-style: none;
+}
+div.bullet-hand > ul > li:before {
+    content: "\261b";
+    color: #99e;
+    margin-right: 1.1rem;
+    font-size: 175%;
+}
+
+div.bullet-star > ul > li {
+    list-style: none;
+}
+div.bullet-star > ul > li:before {
+    content: "\2605";
+    color: #9ee;
+    margin-right: 1.1rem;
 }
