--- a/{{cookiecutter.repo_name}}/css/default.css
+++ b/{{cookiecutter.repo_name}}/css/default.css
@@ -2,6 +2,8 @@
  ***    Presentation Styles
  ****************************************************************************/
 
+@import url('colorful.css');
+
 body {
     color: white;
     font-size: 20pt;
@@ -92,6 +94,29 @@ div.bullet-star > ul > li:before {
 
 
 /****************************************************************************
+ ***    Code Blocks
+ ****************************************************************************/
+
+pre.highlight {
+    color: #111;
+    background-color: #eee;
+    box-shadow: .1rem .1rem .5rem .1rem #99f;
+    padding: .5rem;
+    border: 1px solid #99f;
+}
+
+pre.small {
+    font-size: 70%;
+}
+
+.highlight .c { color: #090 } /* Comment */
+.highlight .c1 { color: #090 } /* Comment.Single */
+.highlight .s1 { color: #009 } /* Literal.String.Single */
+.highlight .s2 { color: #009 } /* Literal.String.Double */
+.highlight .sd { color: #900 } /* Literal.String.Doc */
+
+
+/****************************************************************************
  ***    Text Styles
  ****************************************************************************/
 
@@ -104,12 +129,6 @@ a:visited {
 }
 a:hover {
     color: #bbf;
-}
-
-pre.highlight {
-    background: #777 linear-gradient(to top, #666, #888, #666);
-    padding-left: .5rem;
-    padding-right: .5rem;
 }
 
 tt {
