--- a/{{cookiecutter.repo_name}}/css/default.css
+++ b/{{cookiecutter.repo_name}}/css/default.css
@@ -2,6 +2,7 @@
  ***    Presentation Styles
  ****************************************************************************/
 
+@import url('normalize.css');
 @import url('colorful.css');
 
 body {
