--- a/{{cookiecutter.repo_name}}/css/default.css
+++ b/{{cookiecutter.repo_name}}/css/default.css
@@ -15,6 +15,27 @@ body {
     background: radial-gradient(#225, #111);
 }
 
+{%- if cookiecutter.global_notice %}
+body:before {
+    content: "{{ cookiecutter.global_notice | replace('"', '\\"') }}";
+    color: white;
+    background-color: #911;
+    font-family: Verdana, Sans;
+    font-size: 30%;
+    font-weight: 600;
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-align: center;
+    display: block;
+    position: absolute;
+    bottom: .6em;
+    left: 50%;
+    text-align: middle;
+    min-width: 60em;
+    transform: translateX(-30em);
+}
+
+{%- endif %}
 h1, h2, h3, h4, h5 {
     font-family: "Times New Roman", Times, serif;
     background-color: #149;
