added css/custom.css file

--- a/{{cookiecutter.repo_name}}/css/default.css
+++ b/{{cookiecutter.repo_name}}/css/default.css
@@ -1,5 +1,5 @@
 /****************************************************************************
- ***    Presentation Styles
+ ***    Default Presentation Styles
  ****************************************************************************/
 
 @import url('normalize.css');
